--- a/templates/sharetech/login.html
+++ b/templates/sharetech/login.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ja">
 
 <head>
     <meta charset="UTF-8">
     <meta name="discription" content="ログインページ">
     <title>Login</title>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="login.css">
+    
+    <link rel="stylesheet" href="{% static 'sharetech/css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'sharetech/css/login.css' %}">
 </head>
 
 <body>
     <header class="login_header">
         <h1>
-            <img src="image/logo.png">
+            <img src="{% static 'sharetech/img/logo.png' %}">
         </h1>
     </header>
 
