暫定版新規会員登録処理実装

--- a/sharetech/templates/sharetech/login.html
+++ b/sharetech/templates/sharetech/login.html
@@ -27,7 +27,10 @@
         <div class="form_wrapper">
             {% if form.errors %}
             <div class="error_msg">
-                <p>もう一度ご登録メールアドレス・パスワードをご確認ください</p>
+                {% for field, error in form.errors.items %}
+                <h1>{{error|striptags}}</h1>
+                <h2>{{field}}</h2>
+                {% endfor %}
             </div>
             {% else %}
             <h1>Login</h1>
