--- a/sharetech/templates/sharetech/register.html
+++ b/sharetech/templates/sharetech/register.html
@@ -60,12 +60,12 @@
                             {{form.email}}
                         </div>
                         <div class="form_item">
-                            <label for="password">{{form.password1.label}}</label>
-                            {{form.password1}}
+                            <label for="password">{{form.password.label}}</label>
+                            {{form.password}}
                         </div>
                         <div class="form_item">
-                            <label for="password">{{form.password1.label}} confirm</label>
-                            {{form.password1}}
+                            <label for="password_confirm">{{form.password_confirm.label}}</label>
+                            {{form.password_confirm}}
                         </div>
                         <div class="form_item">
                             <label for="name">{{form.company.label}}</label>
