--- a/sharetech/templates/sharetech/top.html
+++ b/sharetech/templates/sharetech/top.html
@@ -148,21 +148,21 @@
                 <div class="article" value={{article.number}}>
                   <a href="#">
                     <div class="slide_mask"></div>
-                    <img src="{% static article.eyecatch_path %}" class="contain_img"/>
+                    <img src="{% static article.expert_icon_path %}" class="contain_img"/>
                     <div class="discription">
                       <p class="created_at">{{article.created_at|date:"M j, Y"}}</p>
                       <div class="favorite_count">
                         <img src='{% static "favorite_icon.png" %}' class="favorite_icon"/>
-                        <p>{{article.favorite_num}}</p>
+                        <p>{{article.applyed_num}}</p>
                       </div>
                       <h3>{{ article.title }}</h3>
                       <!-- タグなしでok? -->
                       <!-- <p class="tags">test/test/test/test/test/test/test/test/test</p> -->
                       <div class="presenter_flex">
-                        <img src="{% static article.contributor_icon_path %}" class="presenter_icon"/>
+                        <img src="{% static article.expert_icon_path %}" class="presenter_icon"/>
                         <div class="presenter_info">
-                          <p>{{article.contributor_companey}}</p>
-                          <p>{{article.contributor_name}}</p>
+                          <p>{{article.expert_companey}}</p>
+                          <p>{{article.expert_name}}</p>
                         </div>
                       </div>
                     </div>
@@ -182,22 +182,22 @@
               {% for article in attention_article %}
               <div class="article">
                 <a href="#">
-                  <img src='{% static article.eyecatch_path %}' class="contain_img"/>
+                  <img src='{% static article.expert_icon_path %}' class="contain_img"/>
                   <div class="discription">
                     <div class="article_info_flex">
                       <p>{{article.created_at|date:"M j, Y"}}</p>
                       <div class="favorite_count">
                         <img src='{% static "favorite_icon.png" %}' class="favorite_icon"/>
-                        <p>{{article.favorite_num}}</p>
+                        <p>{{article.applyed_num}}</p>
                       </div>
                     </div>
                     <h3>{{ article.title }}</h3>
                     <!-- <p class="tags">test/test/test/test/test/test/test/test/test</p> -->
                     <div class="presenter_flex">
-                      <img src="{% static article.contributor_icon_path %}" class="presenter_icon"/>
+                      <img src="{% static article.expert_icon_path %}" class="presenter_icon"/>
                       <div class="presenter_info">
-                        <p>{{article.contributor_companey}}</p>
-                        <p>{{article.contributor_name}}</p>
+                        <p>{{article.expert_companey}}</p>
+                        <p>{{article.expert_name}}</p>
                     </div>
                     </div>
                   </div>
@@ -217,22 +217,22 @@
               {% for article in follow_user_article %}
               <div class="article">
                 <a href="#">
-                  <img src='{% static article.eyecatch_path %}' class="contain_img"/>
+                  <img src='{% static article.expert_icon_path %}' class="contain_img"/>
                   <div class="discription">
                     <div class="article_info_flex">
                       <p>{{article.created_at|date:"M j, Y"}}</p>
                       <div class="favorite_count">
                         <img src='{% static "favorite_icon.png" %}' class="favorite_icon"/>
-                        <p>{{article.favorite_num}}</p>
+                        <p>{{article.applyed_num}}</p>
                       </div>
                     </div>
                     <h3>{{ article.title }}</h3>
                     <!-- <p class="tags">test/test/test/test/test/test/test/test/test</p> -->
                     <div class="presenter_flex">
-                      <img src="{% static article.contributor_icon_path %}" class="presenter_icon"/>
+                      <img src="{% static article.expert_icon_path %}" class="presenter_icon"/>
                       <div class="presenter_info">
-                        <p>{{article.contributor_companey}}</p>
-                        <p>{{article.contributor_name}}</p>
+                        <p>{{article.expert_companey}}</p>
+                        <p>{{article.expert_name}}</p>
                     </div>
                     </div>
                   </div>
@@ -251,22 +251,22 @@
               {% for article in reccomend_article %}
               <div class="article">
                 <a href="#">
-                  <img src='{% static article.eyecatch_path %}' class="contain_img"/>
+                  <img src='{% static article.expert_icon_path %}' class="contain_img"/>
                   <div class="discription">
                     <div class="article_info_flex">
                       <p>{{article.created_at|date:"M j, Y"}}</p>
                       <div class="favorite_count">
                         <img src='{% static "favorite_icon.png" %}' class="favorite_icon"/>
-                        <p>{{article.favorite_num}}</p>
+                        <p>{{article.applyed_num}}</p>
                       </div>
                     </div>
                     <h3>{{ article.title }}</h3>
                     <!-- <p class="tags">test/test/test/test/test/test/test/test/test</p> -->
                     <div class="presenter_flex">
-                      <img src="{% static article.contributor_icon_path %}" class="presenter_icon"/>
+                      <img src="{% static article.expert_icon_path %}" class="presenter_icon"/>
                       <div class="presenter_info">
-                        <p>{{article.contributor_companey}}</p>
-                        <p>{{article.contributor_name}}</p>
+                        <p>{{article.expert_companey}}</p>
+                        <p>{{article.expert_name}}</p>
                     </div>
                     </div>
                   </div>
