--- a/sharetech/templates/sharetech/login.html
+++ b/sharetech/templates/sharetech/login.html
@@ -37,16 +37,12 @@
             {% endif %}
             <form method="POST">
                 {% csrf_token %}
+                    {% for field in form %}
                     <div class="form_item">
-                        <div class="username">
-                            <label for="name">{{form.family_name_jp.label}}</label>
-                            {{form.family_name_jp}}    
-                        </div>
-                        <div class="username">
-                            <label for="name">{{form.first_name_jp.label}}</label>
-                            {{form.first_name_jp}}    
-                        </div>
+                        <img src="{% static 'sharetech/img/input_valid_mark.png' %}">
+                        {{field}}
                     </div>
+                    {% endfor %}
                 <div class="login_button">
                     <input type="submit" class="button" title="Sign In" value="ログイン">
                 </div>
