--- a/sharetech/templates/sharetech/async_load_template.html
+++ b/sharetech/templates/sharetech/async_load_template.html
@@ -1,15 +1,15 @@
 {% load static %}
 
-{% for article in reccomend_article %}
+{% for article in discover_article %}
 <div class="article">
   <a href="#">
-    <img src='{% static article.eyecatch_path %}' class="contain_img"/>
+    <img src='{% static article.expert_icon_path %}' class="contain_img"/>
     <div class="discription">
       <div class="article_info_flex">
         <p>{{article.created_at|date:"M j, Y"}}</p>
         <div class="favorite_count">
           <img src='{% static "favorite_icon.png" %}' class="favorite_icon"/>
-          <p>{{article.favorite_num}}</p>
+          <p>{{article.applyed_num}}</p>
         </div>
       </div>
       <h3>{{ article.title }}</h3>
@@ -17,8 +17,8 @@
       <div class="presenter_flex">
         <img src="{% static article.contributor_icon_path %}" class="presenter_icon"/>
         <div class="presenter_info">
-          <p>{{article.contributor_companey}}</p>
-          <p>{{article.contributor_name}}</p>
+          <p>{{article.expert_companey}}</p>
+          <p>{{article.expert_name}}</p>
       </div>
       </div>
     </div>
