--- a/sharetech/static/sharetech/css/common.css
+++ b/sharetech/static/sharetech/css/common.css
@@ -28,7 +28,6 @@ body {
     font-weight: 300;
     line-height: 1.8;
     min-width: 320px;
-    overflow: hidden;
 }
 
 a{
@@ -163,8 +162,7 @@ a{
     font-size: 16px;
 }
 
-.page_header .main_nav .tag_search .category_contena input:hover
-{
+.page_header .main_nav .tag_search .category_contena input:hover{
     cursor: pointer;
 }
 
