--- a/sharetech/templates/sharetech/top.html
+++ b/sharetech/templates/sharetech/top.html
@@ -16,124 +16,151 @@
 </head>
 
 <body>
+  <!-- レスポンシブ用ナビゲーション -->
+  <nav class="main_nav" role="navigation">
+    <div class="my_account">
+      <a href="#">
+        <img src="{% static 'sharetech/img/ogo_login_page.png' %}" alt="">
+      </a>
+    </div>
+
+    <form action="#" class="keyword_search">
+      <input id="search_keyword" class="search_keyword" placeholder="キーワード検索" type="text" name="search_key" required>
+      <input id="search_button" class="search_button" value="検索" type="submit" method="get">
+    </form>
+    <div class="tag_search">
+      <h2>タグ検索</h2>
+      <ul class="category_contena">
+        <li class="big_category">
+          <input type="button" class="category_network" value="▼ ネットワーク">
+          <div class="small_category">
+            <ul>
+              <li><a href="#">5G</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">LAN</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">WAN</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">デバイス</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">サーバ</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="big_category">
+          <input type="button" class="category_network" value="▼ セキュリティ">
+          <div class="small_category">
+            <ul>
+              <li><a href="#">Webアプリケーション</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">OS</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">NWセキュリティ</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">エンドポイント</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">サービス</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="big_category">
+          <input type="button" class="category_network" value="▼ クラウド">
+          <div class="small_category">
+            <ul>
+              <li><a href="#">SaaS</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">IaaS</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">PaaS</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">BaaS</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">IPaaS</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="big_category">
+          <input type="button" class="category_network" value="▼ XR">
+          <div class="small_category">
+            <ul>
+              <li><a href="#">AR</a></li>
+              <li><p>/</p></li>
+              <li><a href="#">VR</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="big_category">
+          <input type="button" class="category_network" value="▼ その他">
+          <div class="small_category">
+            <ul>
+              <li><a href="#">その他</a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <h2>{{ user.username }}</h2>
+    <a href="{% url 'logout' %}">ログアウト</a>
+
+    <div class="about_us">
+      <ul>
+        <li class="about">
+          <img src="image/default_icon.png" alt="">
+          <a href="#"><p>About</p></a>
+        </li>
+        <li class="twitter">
+          <img src="image/Twitter social icons - circle - blue.png" alt="">
+          <a href="#"><p>Twitter</p></a>
+        </li>  
+        <li class="facebook">
+          <img src="image/f_logo_RGB-Blue_1024.png" alt="">
+          <a href="#"><p>Facebook</p></a>
+        </li>      
+      </ul>
+    </div>
+  </nav>
+
+  <!-- ヘッダ -->
   <header class="page_header" role="banner">
     <div class="inner">
-      <h1 class="site_logo">
-        <a href="...">
-          <img src="image/logo.png">
-        </a>
-      </h1>
-      <nav class="main_nav" role="navigation">
-        <div class="my_account">
-          <a href="#">
-            <img src="image/default_icon.png" alt="">
-        </a>
-        </div>
-  
-        <form action="#" class="keyword_search">
-          <input id="search_keyword" class="search_keyword" placeholder="キーワード検索" type="text" name="search_key" required>
-          <input id="search_button" class="search_button" value="検索" type="submit" method="get">
-        </form>
-        <div class="tag_search">
-          <h2>タグ検索</h2>
-          <ul class="category_contena">
-            <li class="big_category">
-              <input type="button" class="category_network" value="▼ ネットワーク">
-              <div class="small_category">
-                <ul>
-                  <li><a href="#">5G</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">LAN</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">WAN</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">デバイス</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">サーバ</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="big_category">
-              <input type="button" class="category_network" value="▼ セキュリティ">
-              <div class="small_category">
-                <ul>
-                  <li><a href="#">Webアプリケーション</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">OS</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">NWセキュリティ</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">エンドポイント</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">サービス</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="big_category">
-              <input type="button" class="category_network" value="▼ クラウド">
-              <div class="small_category">
-                <ul>
-                  <li><a href="#">SaaS</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">IaaS</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">PaaS</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">BaaS</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">IPaaS</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="big_category">
-              <input type="button" class="category_network" value="▼ XR">
-              <div class="small_category">
-                <ul>
-                  <li><a href="#">AR</a></li>
-                  <li><p>/</p></li>
-                  <li><a href="#">VR</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="big_category">
-              <input type="button" class="category_network" value="▼ その他">
-              <div class="small_category">
-                <ul>
-                  <li><a href="#">その他</a></li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-        </div>
-
-        <h2>{{ user.username }}</h2>
-        <a href="{% url 'logout' %}">ログアウト</a>
-
-        <div class="about_us">
-          <ul>
-            <li class="about">
-              <img src="image/default_icon.png" alt="">
-              <a href="#"><p>About</p></a>
-            </li>
-            <li class="twitter">
-              <img src="image/Twitter social icons - circle - blue.png" alt="">
-              <a href="#"><p>Twitter</p></a>
-            </li>  
-            <li class="facebook">
-              <img src="image/f_logo_RGB-Blue_1024.png" alt="">
-              <a href="#"><p>Facebook</p></a>
-            </li>      
-          </ul>
-        </div>
-      </nav>
       <label class="menu_btn">
         <span class="top"></span>
         <span class="middle"></span>
         <span class="bottom"></span>
       </label>
+
+      <div class="user_icon">
+        <img src="{% static 'sharetech/img/default_avater.png' %}" alt="">
+      </div>
+
+      <h1 class="site_logo">
+        <a href="...">
+          <img src="{% static 'sharetech/img/logo_header.png' %}">
+        </a>
+      </h1>
+
+    </div>
+
+    <div class="global_nav">
+      <div class="link_other_menu">
+        <a class="link_consult_window selected" href="">
+          <p>専門家に相談する</p>
+        </a>
+        <a class="link_article" href="">
+          <p>テクノロジーを発見する</p>
+        </a>  
+      </div>
+      <div class="search_menu_area">
+        <form action="#" class="keyword_search">
+          <input id="search_keyword" class="search_keyword" placeholder="キーワード検索" type="text" name="search_key" required>
+          <input id="search_button" class="search_button" value="検索" type="submit" method="get">
+        </form>
+      </div>
     </div>
   </header>
-            
+
+  <!-- メイン -->
   <main>
     <div class="split">
       <div class="split_item split_left">
@@ -207,18 +234,12 @@
               <a href="#">
                 <img src='{% static article.expert_icon_path %}' class="contain_img"/>
                 <div class="discription">
-                  <div class="article_info_flex">
-                    <p>{{article.created_at|date:"M j, Y"}}</p>
-                    <div class="favorite_count">
-                      <img src='{% static "favorite_icon.png" %}' class="favorite_icon"/>
-                      <p>{{article.applyed_num}}</p>
-                    </div>
-                  </div>
                   <h3>{{ article.title }}</h3>
                   <div class="presenter_flex">
-                    <img src="{% static article.expert_icon_path %}" class="presenter_icon"/>
                     <div class="presenter_info">
                       <p>{{article.expert_companey}}</p>
+                    </div>
+                    <div class="presenter_info">
                       <p>{{article.expert_name}}</p>
                     </div>
                   </div>
@@ -239,18 +260,12 @@
               <a href="#">
                 <img src='{% static article.expert_icon_path %}' class="contain_img"/>
                 <div class="discription">
-                  <div class="article_info_flex">
-                    <p>{{article.created_at|date:"M j, Y"}}</p>
-                    <div class="favorite_count">
-                      <img src='{% static "favorite_icon.png" %}' class="favorite_icon"/>
-                      <p>{{article.applyed_num}}</p>
-                    </div>
-                  </div>
                   <h3>{{ article.title }}</h3>
                   <div class="presenter_flex">
-                    <img src="{% static article.expert_icon_path %}" class="presenter_icon"/>
                     <div class="presenter_info">
                       <p>{{article.expert_companey}}</p>
+                    </div>
+                    <div class="presenter_info">
                       <p>{{article.expert_name}}</p>
                     </div>
                   </div>
@@ -271,18 +286,12 @@
               <a href="#">
                 <img src='{% static article.expert_icon_path %}' class="contain_img"/>
                 <div class="discription">
-                  <div class="article_info_flex">
-                    <p>{{article.created_at|date:"M j, Y"}}</p>
-                    <div class="favorite_count">
-                      <img src='{% static "favorite_icon.png" %}' class="favorite_icon"/>
-                      <p>{{article.applyed_num}}</p>
-                    </div>
-                  </div>
                   <h3>{{ article.title }}</h3>
                   <div class="presenter_flex">
-                    <img src="{% static article.expert_icon_path %}" class="presenter_icon"/>
                     <div class="presenter_info">
                       <p>{{article.expert_companey}}</p>
+                    </div>
+                    <div class="presenter_info">
                       <p>{{article.expert_name}}</p>
                     </div>
                   </div>
